--- a/Main/package.json
+++ b/Main/package.json
@@ -1,18 +1,18 @@
 {
   "name": "mern-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "challenge 18",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "JM Cabrera Elias",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^7.0.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
