--- a/Main/package.json
+++ b/Main/package.json
@@ -12,7 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.2.0"
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
